--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -40,6 +40,19 @@
     width: 100%
     height: 100%
 
+    perspective: 1000px
+
+    .slides-and-nav-wrapper
+      position: absolute
+      top: 0px
+      left: 0px
+      width: 100%
+      height: 100%
+
+      transform: rotateX(0deg) translate3d(0,0,0)
+      transform-origin: center bottom
+      transition: transform $speed_metal $evil_ease $speed
+
     .slides-wrapper
       position: absolute
       top: 0px
@@ -414,6 +427,17 @@
               margin: 0 0 0 -8px
               transform: rotate(-45deg)
 
+    &.show-details
+      .slides-and-nav-wrapper
+        transform: rotateX(33deg) translate3d(0,0,0)
+        transition: transform $speed_metal $evil_ease
+
+      #detail-slides
+        opacity: 1
+
+        transform: rotateX(0deg) translate3d(0,0,0)
+        transition: transform $speed_metal $evil_ease $speed, opacity $speed_metal $evil_ease $speed
+
 // -----------------------------------------------
 // Home styles
 // -----------------------------------------------
@@ -510,6 +534,11 @@
   background-color: $light_gray
   overflow: hidden
   display: none
+  opacity: 0
+
+  transform: rotateX(-33deg) translate3d(0,0,0)
+  transform-origin: center bottom
+  transition: transform $speed_metal $evil_ease, opacity $speed_metal $evil_ease
 
   .detail-slide
     position: absolute
