--- a/src/styles/slides/_about-process.sass
+++ b/src/styles/slides/_about-process.sass
@@ -196,6 +196,49 @@
             .icon
               animation: bounce $speed $evil_ease
 
+      ul.socials
+        font-size: 0
+        line-height: 0
+
+        li.social
+          position: relative
+          width: 20px
+          height: 20px
+          padding: 0 4px
+          display: inline-block
+          overflow: hidden
+
+          a
+            position: absolute
+            top: 0px
+            left: 0px
+            width: 100%
+            height: 100%
+            background-image: url('/images/socials@2x.png')
+            background-repeat: no-repeat
+            background-size: 20px 80px
+            overflow: hidden
+            opacity: 0.3
+
+            transition: opacity $speed $ease_out
+
+            &:hover
+              opacity: 1
+
+          &:nth-child(1)
+            padding-left: 0px
+            a
+              background-position: center 0px
+
+          &:nth-child(2) a
+            background-position: center -20px
+
+          &:nth-child(3) a
+            background-position: center -40px
+
+          &:nth-child(4) a
+            background-position: center -60px
+
       ul.lists
         float: left
         width: 50%
