--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -129,7 +129,7 @@ header
         height: 100%
         height: 20px
         text-decoration: none
-        background-image: url('/images/icons-sprite@2x.png')
+        background-image: url('/images/header-icons@2x.png')
         background-repeat: no-repeat
         background-position: center 2px
         background-size: 32px 48px
