First pass at a home page fun thing. NEEDS SOME WORK.

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -313,6 +313,29 @@
 .page#home
   .page-inner
     background-color: rgb(255,242,0)
+
+    .mask-wrapper
+      .mask-wrapper-inner
+        #home-page-slides
+          #home-landing
+            .slide-inner
+              #home-video-wrap
+                position: relative
+                width: 100%
+                height: 100%
+                overflow: hidden
+                cursor: default
+
+                video
+                  display: none
+                  position: absolute
+                  top: 50%
+                  left: 50%
+                  width: auto
+                  height: auto
+                  min-width: 100%
+                  min-height: 100%
+                  transform: translate(-50%, -50%)
  
 // -----------------------------------------------
 // About styles
