power commit: break work details out into their own mvc

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -420,7 +420,7 @@
 // --------------------------------------------------------------------------
 // --------------------------------------------------------------------------
 
-#detail-slides
+.detail-slides
   position: absolute
   top: 0px
   left: 0px
