Working on home page ideas.

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -328,6 +328,8 @@
 
                 video
                   display: none
+
+                canvas
                   position: absolute
                   top: 50%
                   left: 50%
