--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -123,8 +123,8 @@ header
       top: 50%
       right: 0px
       width: 60px
-      height: 20px
-      margin: -10px 0 0
+      height: 40px
+      margin: -20px 0 0
       font-size: 0
       line-height: 0
 
@@ -132,25 +132,39 @@ header
         width: 80px
 
       a
-        width: 50%
+        position: relative
+        width: 40px
         height: 100%
-        height: 20px
         text-decoration: none
-        background-image: url('/images/header-icons@2x.png')
-        background-repeat: no-repeat
-        background-position: center 2px
-        background-size: 32px 48px
         display: inline-block
+        overflow: hidden
+
+        &:first-child
+          &:after
+            content: ''
+            position: absolute
+            top: 0px
+            left: 0px
+            width: 100%
+            height: 100%
+            background-image: url('/images/hot-mail.png')
+            background-repeat: no-repeat
+            background-position: 0px center
+            background-size: 1400px 40px
+
+          &:hover:after
+            animation: sequencer 1458ms steps(34) forwards
 
         &:last-child
+          background-image: url('/images/header-icons@2x.png')
+          background-repeat: no-repeat
           background-position: center -30px
+          background-size: 32px 48px
 
         @include respond-above($media_480)
-          background-position: center top
-          background-size: 40px 60px
-
           &:last-child
-            background-position: center -40px
+            background-position: center top
+            background-size: 40px 60px
 
 // ---------------------------------------------
 // Party mode
@@ -168,10 +182,10 @@ header
                 span
                   background-color: $black
 
-      #secondary-nav
-        a
-          opacity: 1
-          transition: opacity $speed $ease_out
+      // #secondary-nav
+      //   a
+      //     opacity: 1
+      //     transition: opacity $speed $ease_out
           
-          &:hover
-            opacity: 0.6
+      //     &:hover
+      //       opacity: 0.6
