fade about slide images on transition, tweak detail colors

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -465,7 +465,7 @@
       section
         position: relative
         width: 100%
-        background-color: $light_gray
+        background-color: $almost_white
 
         .inner
           position: relative
@@ -478,7 +478,7 @@
 
           p
             max-width: 460px
-            color: #838383
+            color: $evil_gray
             @include type-mono
 
           .placeholder
