--- a/src/styles/_vars.sass
+++ b/src/styles/_vars.sass
@@ -12,7 +12,9 @@ $white: #fff
 $yellow: #fff200
 $blue: #00aeef
 $gray: #aaa
+$evil_gray: #666
 $light_gray: #e5e5e5
+$almost_white: #f7f7f7
 
 // Speeds
 $speed: 333ms
