--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -14,6 +14,36 @@
     overflow: hidden
 
   // ---------------------------------------------
+  // Shared styles: Picture zone
+  // ---------------------------------------------
+
+  .picture-zone
+    position: absolute
+    top: 0px
+    left: 0px
+    width: 100%
+    height: 100%
+    background-repeat: no-repeat
+    background-position: right bottom
+    background-size: 100% auto
+    overflow: hidden
+    opacity: 0
+
+    transition: opacity $speed $ease_in
+
+    &.show
+      opacity: 1
+
+      transition: opacity $speed $ease_out
+
+    @media all and (max-aspect-ratio: 5/4)
+      background-position: 66% bottom
+      background-size: auto 90%
+      
+      &.show
+        opacity: 0.33
+
+  // ---------------------------------------------
   // Shared styles: Title zone
   // ---------------------------------------------
 
