--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -9,8 +9,10 @@
 @import "src/styles/header"
 @import "src/styles/pages"
 @import "src/styles/transition"
+@import "src/styles/watch-video"
 @import "src/styles/slides/slide"
 @import "src/styles/slides/about"
 @import "src/styles/slides/about-process"
 @import "src/styles/slides/work"
 @import "src/styles/slides/featured-work"
+@import "src/styles/slides/detail/detail"
