--- a/src/styles/slides/detail/_detail.sass
+++ b/src/styles/slides/detail/_detail.sass
@@ -174,6 +174,28 @@
                 overflow: hidden
                 display: inline-block
 
+            .arrow
+              position: absolute
+              top: 50%
+              left: 0px
+              width: 76px
+              height: 76px
+              margin: -38px 0 0
+              background-color: $almost_white
+
+              transform: translate3d(0%,0,0)
+              transition: transform $speed_metal $evil_ease
+
+              &.next
+                left: auto
+                right: 0px
+
+              &.disabled.prev
+                transform: translate3d(-100%,0,0)
+
+              &.disabled.next
+                transform: translate3d(100%,0,0)
+
     .detail-loader
       position: absolute
       top: 0px
