--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -368,6 +368,10 @@
   width: 0%
   height: 100%
   overflow: hidden
+  // background-image: url(../images/bg-transition.png)
+  // background-repeat: no-repeat
+  // background-position: 50% 0%
+  // background-size: 1920px 1920px
 
   canvas
     position: absolute
