--- a/src/styles/slides/detail/_detail.sass
+++ b/src/styles/slides/detail/_detail.sass
@@ -133,12 +133,62 @@
             background-color: $black
             overflow: hidden
 
-            iframe
+            .video-poster
               position: absolute
-              top: 0px
-              left: 0px
-              width: 100%
-              height: 100%
+              top: -1px
+              left: -1px
+              right: -1px
+              bottom: -1px
+              background-repeat: no-repeat
+              background-position: center center
+              background-size: cover
+              cursor: pointer
+              visibility: visible
+              opacity: 1
+
+              transition: visibility 0ms linear, opacity $speed_metal $ease_out
+
+              &:after
+                content: ''
+                position: absolute
+                top: 50%
+                left: 50%
+                width: 76px
+                height: 76px
+                background-color: $almost_white
+
+                transform: translate(-50%,-50%)
+
+            .video-player
+              position: absolute
+              top: -1px
+              left: -1px
+              right: -1px
+              bottom: -1px
+              visibility: hidden
+              opacity: 0
+
+              transition: visibility 0ms linear $speed_metal, opacity $speed_metal $ease_out
+
+              iframe
+                position: absolute
+                top: 0px
+                left: 0px
+                width: 100%
+                height: 100%
+
+            &.playing
+              .video-poster
+                visibility: hidden
+                opacity: 0
+
+                transition: visibility 0ms linear $speed_metal, opacity $speed_metal $ease_out
+
+              .video-player
+                visibility: visible
+                opacity: 1
+
+                transition: visibility 0ms linear $speed_metal, opacity $speed_metal $ease_out $speed_metal
 
         &.media-slideshow
           .slideshow-holder
