First pass at 404.

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -349,6 +349,20 @@
     background-color: rgb(0,174,239)
 
 // -----------------------------------------------
+// Error styles
+// -----------------------------------------------
+.page#error
+  .page-inner
+    background-color: rgb(0,174,239)
+
+    p
+      position: absolute
+      top: 50%
+      width: 100%
+      margin-top: -6px
+      text-align: center
+
+// -----------------------------------------------
 // Transish
 // -----------------------------------------------
 .page.out-left, .page.out-right
