--- a/src/styles/_watch-video.sass
+++ b/src/styles/_watch-video.sass
@@ -4,7 +4,7 @@
   left: 0px
   width: 100%
   height: 100%
-  background-color: $black
+  background-color: $evil_gray
   overflow: hidden
   display: none
 
@@ -14,5 +14,79 @@
     left: 0px
     width: 100%
     height: 100%
-    background-color: $black
     overflow: hidden
+
+    .video-holder
+      position: relative
+      width: 100%
+      height: 100%
+      max-width: 666px
+      margin: 0 auto
+
+      .video-player
+        position: absolute
+        top: 50%
+        left: 0px
+        width: 100%
+        height: 0
+        padding: 0 0 56.25%
+        background-color: $black
+        overflow: hidden
+
+        transform: translate(0,-50%)
+
+        iframe
+          position: absolute
+          top: 0px
+          left: 0px
+          width: 100%
+          height: 100%
+          opacity: 0
+
+        &.playing
+          iframe
+            opacity: 1
+
+    .watch-video-loader
+      position: absolute
+      top: 0px
+      left: 0px
+      width: 100%
+      height: 100%
+      background-color: $black
+      overflow: hidden
+      visibility: visible
+      opacity: 1
+
+      .spinner
+        position: absolute
+        top: 50%
+        left: 50%
+        width: 50px
+        height: 50px
+        overflow: hidden
+
+        transform: translate(-50%,-50%)
+
+        span
+          position: absolute
+          top: 0px
+          left: 0px
+          right: 0px
+          bottom: 0px
+          border: 10px solid $white
+          border-top: 10px solid transparent
+          border-radius: 50%
+
+          transform: rotate(0deg)
+
+      &.loading
+        .spinner
+          span
+            animation: spinner 1s linear infinite
+
+      &.loaded
+        visibility: hidden
+        opacity: 0
+
+        transition: visibility 0ms linear ($speed_metal * 2), opacity $speed_metal linear $speed_metal
