--- a/src/styles/_main.sass
+++ b/src/styles/_main.sass
@@ -27,7 +27,13 @@ a
   left: 0px
   width: 100%
   height: 100%
+  background-color: $white
   overflow: hidden
+
+  transition: background-color $speed_metal $evil_ease
+
+  &.inverse
+    background-color: $black
 
 #wrapper-inner
   position: absolute
