--- a/src/styles/slides/detail/_detail.sass
+++ b/src/styles/slides/detail/_detail.sass
@@ -40,13 +40,12 @@
       overflow-y: scroll
 
       -webkit-overflow-scrolling: touch
-
       transform: translate3d(0,0,0)
 
       section
         position: relative
         width: 100%
-        background-color: $almost_white
+        background-color: $almost_black
 
         .inner
           position: relative
@@ -54,12 +53,12 @@
 
           h4
             max-width: 460px
-            color: $black
+            color: $white
             @include type-mono
 
           p
             max-width: 460px
-            color: $evil_gray
+            color: $gray
             @include type-mono
 
         &:first-child
@@ -83,7 +82,7 @@
               max-width: 466px
               margin: 0 auto
               padding: 100px
-              background-color: $black
+              background-color: $almost_black
 
               transform: translate3d(0,0px,0)
 
@@ -95,7 +94,7 @@
                 @include type-mono
 
               p
-                color: #aaa
+                color: $gray
                 @include type-mono
 
               .lists
@@ -106,7 +105,7 @@
                   width: 50%
 
                   li
-                    color: #aaa
+                    color: $gray
                     @include type-mono
 
                     &:first-child
@@ -196,7 +195,7 @@
             width: 100%
             height: 0
             margin: 80px 0 0
-            padding: 0 0 50%
+            padding: 0 0 56.25%
             background-color: $black
             overflow: hidden
 
