change slideshow slide class name to slide-img to fix colors

--- a/src/styles/slides/detail/_detail.sass
+++ b/src/styles/slides/detail/_detail.sass
@@ -220,7 +220,7 @@
               &.no-trans
                 transition: none
 
-              .slide
+              .slide-img
                 position: relative
                 width: 100%
                 height: 100%
